Changed Prim's algorithm

--- a/Project5/Project5.vcxproj.filters
+++ b/Project5/Project5.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Graph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DisjointSet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
